# sessint-compiler

./: .gitignore  README.md
results/CC0_queue/: CC0_queue.prog
results/CC0_queue/mine/: CC0_queue.go  times.txt  times_compile.txt
results/CC0_queue/old/: CC0_queue.go  times.txt  times_compile.txt
results/a/: a.prog
results/a/mine/: a.go  a.out  times.txt  times_compile.txt
results/a/old/: a.go  (+3 more)
results/b/: b.prog
results/b_error/: b_error.prog
results/bit_counter/: bit_counter.prog
results/c/: c.prog
results/calculator/: calculator.prog
results/cripto_miner/: cripto_miner.prog
results/d/: d.prog
results/fibbonacci/: fibbonacci.prog
results/filter/: filter.prog
results/filter_batota/: filter_batota.prog
results/intList/: intList.prog
results/intStack/: intStack.prog
results/map-reduce/: map-reduce.prog
results/nats/: nats.prog
results/nats_simple/: nats_simple.prog
results/receive-send/: receive-send.prog
results/send-receive-simple/: send-receive-simple.prog
results/send-receive-spawn-in-function/: send-receive-spawn-in-function.prog
results/send-receive-spwan/: send-receive-spwan.prog
results/send_receive_choice/: send_receive_choice.prog
results/send_receive_separated/: send_receive_separated.prog
results/send_receive_two_functions/: send_receive_two_functions.prog
results/sum/: sum.prog
sessint/: dune-project  sessint.opam
sessint/lib/: bundleMessages.ml  compiler.ml  dune  inputSyntax.ml  interpreter.ml  lexer.mll  optimizations.ml  parser.mly  printer.ml  syntax.ml  typechecker.ml
sessint/test/: dune
(+344 files in other folders)
