(lang dune 3.5)

(name sessint)

(generate_opam_files true)
(using menhir 2.1)


(source
 (github btoninho/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name sessint)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune menhir thread unix)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
